--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   // onInit: null, // Once the application insights instance has loaded and initialized this callback function will be called with 1 argument -- the sdk instance (DON'T ADD anything to the sdk.queue -- As they won't get called)
   // sri: false, // Custom optional value to specify whether fetching the snippet from integrity file and do integrity check
   cfg: { // Application Insights Configuration
-    connectionString: "YOUR_CONNECTION_STRING"
+    connectionString: "InstrumentationKey=f6ea2fe1-ef5a-4b5a-b2c5-016748ee88df;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=463e2964-dc2b-4669-9b1c-500fa916e44f"
 }});
 </script>
     <meta charset="utf-8"/>
